--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coral-xyz/anchor": "^0.26.0",
+    "@metaplex-foundation/js": "^0.17.12",
+    "@solana/spl-token": "^0.3.7",
+    "@solana/wallet-adapter-react": "^0.15.28",
+    "@solana/wallet-adapter-react-ui": "^0.9.27",
+    "@solana/wallet-adapter-wallets": "^0.19.10",
+    "@solana/web3.js": "^1.73.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toruslabs/eccrypto": "^1.1.8",
+    "axios": "^1.2.2",
     "babel-preset-php": "^2.0.0",
+    "chai": "^4.3.7",
     "framer-motion": "^7.5.3",
+    "patch-package": "^6.5.1",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
@@ -15,13 +26,15 @@
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": [
@@ -42,8 +55,21 @@
     ]
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/node": "^18.11.18",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.12",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.1.8",
+    "url": "^0.11.0"
+  },
+  "browser": {
+    "crypto": false
   }
 }
